2014-02-25  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y (spec): Bugfix: SECRET_ESCAPE_E should use n_expr
	not expr. expr is subject to expand_meta.
	(n_expr): Do not associate source info with character
	literals.
	(expand_meta): Bugfix: when walking forms in a collecting loop,
	propagate the source info to them. Bugfix: attach source
	info to var and expr expansions.
	(rl): Rewritten in terms of rlset.
	(rlset): Only set source info for an object that doesn't already
	have it.

2014-02-25  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (obj_init): Revert qquote, unquote and splice
	to the system namespace, for hygiene.

	* txr.1: Updated.

2014-02-25  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): HAVE_MAKEDEV not HAVE_MKDEV.

2014-02-25  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (getcwd_wrap): Implement correct test of getcwd's
	return value.

2014-02-25  Kaz Kylheku  <kaz@kylheku.com>

	* configure: Use -Werror= on the missing prototypes and
	strict prototypes warnings; these should be errors.

2014-02-25  Kaz Kylheku  <kaz@kylheku.com>

	* configure: Added feature tests for makedev, link/symlink/readlink,
	mkdir and mknod.

	* eval.c (eval_init): Wrap #ifdefs around the registrations of
	the wrappers for these functions.

	* stream.c (mkdir_wrap): Wrap in #ifdef HAVE_MKDIR, and
	provide a Windows version if HAVE_MKDIR is missing, but
	HAVE_WINDOWS_H is true.
	(makedev_wrap, major_wrap, minor_wrap): Wrap with #if HAVE_MAKEDEV.
	(mknod): Use #if HAVE_MKNOD.
	(symlink_wrap, link_wrap, readlink_wrap): Wrap with #if HAVE_SYMLINK.

2014-02-24  Kaz Kylheku  <kaz@kylheku.com>

	* debug.c (debug): Fix 2013-12-02 regression, which leaves the
	debugger not printing the current line of data.

2014-02-24  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Intern symlink_wrap, link_wrap, readlink_wrap.

	* stream.c (symlink_wrap, link_wrap, readlink_wrap): New functions.

	* stream.h (symlink_wrap, link_wrap, readlink_wrap): Declared.

	* txr.1: Documented.
